Fix T60735: Cycles render hangs with vertex instancing.

This should not use the original index as a unique instance index, with for
example an array modifier the same original index may be used multiple times.